fix padding on hero on all devices and cropped image

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
     position: fixed;
     min-width: 100%;
     top: 0;
+    height: 120px;
 }
 
 .header__logo {
@@ -56,7 +57,7 @@ body {
 .hero {
     display: flex;
     justify-content: center;
-    margin-top: 110px;
+    margin-top: 120px;
     height: 400px;
 }
 
@@ -323,7 +324,11 @@ h1.contact__title {
 
     .hero{
         height: 300px;
-        margin-top: 100px;
+        margin-top: 120px;
+    }
+
+    .hero img {
+        object-fit: cover;
     }
 
     .hero__action {
@@ -494,7 +499,11 @@ h1.contact__title {
 
     .hero{
         height: 300px;
-        margin-top: 140px;
+        margin-top: 120px;
+    }
+
+    .hero img {
+        object-fit: cover;
     }
 
     .hero__action {
